# Demo-Program

./: .gitignore  CMakeLists.txt  fail-detail
bashscripts/: functions.sh  test.sh
code/c++/demo1/include/: CProcess.cpp  CTools.cpp  sortTool.h
code/c++/demo2/: Makefile  TextQuery.cpp  TextQuery.h  functions.h  infile  outfile  output
code/c++/demo3-libssh/: Makefile  main.cc  ssh-client-cj
code/c++/demo4-xlib/: output  panel_do.sh
code/python/add-apt-repository/: add-apt-repository-1907271254.py
code/shell/demo1/: autoInstallJdk.sh
code/shell/demo2-system/: a.sh  add_user.sh  auto_login.sh  color_script.sh  copy_command.sh  demo-systemd.service  echo_time.sh  hw_information.sh  rmcp.sh  rootcron  show_sys_info_case.sh
code/shell/demo3-iptables/: iptables-20180622-v1  iptbale.state
configure/httpd/conf.d/: admin.conf  ilinux.conf  ilinux_fqdn.conf  ilinux_fqdn_status.conf  iunix_fqdn.conf  iunix_ip.conf  iunix_port.conf  ssl.conf  virhost_fpmcgi.conf
configure/lxc/: common.conf
docs/: README.md  _coverpage.md  index.html
docs/notes/: add-apt-repository.md  linuxbar.md  pythonbar.md
include/: CTools.h  functions.h
practice/: QueryResult.h  demo.h  main.cpp  output
src/: main.cpp
xlib_cj/: checkScreen.sh  compile.sh  prog-2.cc  prog-3.cc  prog-4.cc
